hard-gists/7fd265e5419efe71477ca560801d0130/run.log
=== Docker Run Log for 7fd265e5419efe71477ca560801d0130 ===
Started at: Mi 29. Okt 17:35:58 CET 2025

[2025-10-29 17:35:59] START: Running container for 7fd265e5419efe71477ca560801d0130
[2025-10-29 17:35:59] SUCCESS: Container 42c30e015cc781ec727f94cd229174906070bc19b21c863b62401a6bb0884ccf started for 7fd265e5419efe71477ca560801d0130
=== Container logs for 7fd265e5419efe71477ca560801d0130 ===
  File "/snippet.py", line 8
    print "Usage: python protomean_to_npy.py proto.mean out.npy"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7fd265e5419efe71477ca560801d0130 ===
[2025-10-29 17:36:01] INFO: Container 42c30e015cc781ec727f94cd229174906070bc19b21c863b62401a6bb0884ccf has stopped
